test_files/syntax_errors/illegal_if_in_if_condition.java
public class Factorial{
    public static void main(String[] a){
    {}//Needed!
    }
}

class Element {
    public boolean Init(){
        //int test = v_Age ;//Not allowed by MiniJava
        int test; //This should be done instead
        test  = v_Age //This should be done instead
        if(if(true)){
        }
    }
}
